# kmoe-manga-downloader

./: .gitignore  Kmoe Manga Downloader.bat  Kmoe Manga Downloader.pyw  KmoeMangaDownloader-windows-onefile.spec  KmoeMangaDownloader-windows.spec  README.md  kmoe-manga-downloader.desktop  pyproject.toml
.github/workflows/: release-package.yml  windows-release.yml
docs/: gui-usage.md  linux-wsl.md  windows-build.md
scripts/: build_windows.bat
src/kmdr/: gui.py  main.py  windows_cli.py  windows_gui.py
src/kmdr/core/: console.py
src/kmdr/module/configurer/: BaseUrlUpdator.py
src/kmdr/module/downloader/: base.py
tests/: test_kmdr_gui.py
