[tool.poetry]
name = "kmoe-manga-downloader"
version = "0.0.0" # placeholder, dynamic versioning will replace it
description = "A CLI-downloader for site @kox.moe."
authors = ["Chris Zheng <chrisis58@outlook.com>"]
readme = "README.md"
license = "MIT"
keywords = ["manga", "downloader", "kmoe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "kmdr", from = "src"}]
homepage = "https://github.com/chrisis58/kmoe-manga-downloader"
repository = "https://github.com/chrisis58/kmoe-manga-downloader"

[tool.poetry.scripts]
kmdr = "kmdr.main:entry_point"
kmdr-gui = "kmdr.gui:entry_point"

[tool.poetry.dependencies]
python = ">=3.9"
beautifulsoup4 = "~4.13.4"
aiohttp = "~3.12.15"
aiofiles = "~24.1.0"
rich = "~13.9.4"
yarl = "~1.20.1"
typing-extensions = "~4.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
target-version = "py39"
line-length = 150

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["F403"]

[tool.ruff.format]
quote-style = "double"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/kmdr/_version.py"]
